--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,14 @@ name = "core"
 path = "lib.rs"
 test = false
 bench = false
+
+[dev-dependencies]
+rand = "0.3"
+
+[[test]]
+name = "coretests"
+path = "../libcore/tests/lib.rs"
+
+[[bench]]
+name = "corebenches"
+path = "../libcore/benches/lib.rs"
